@@ -1,5 +1,12 @@
 Changes with Apache 1.3b7
 
+  *) Mod_log_agent, mod_log_referer now use ap_open_piped_log for piped logs.
+     [Brian Behlendorf]
+
+  *) Replace use of spawn_child with ap_spawn_child_err_buff, to make everything
+     "safe" under Win32.  In: mod_include.c, mod_mime_magic.c
+     [Brian Behlendorf]
+
   *) Improve RFC1413 support. [Bob Beck <beck@bofh.ucs.ualberta.ca>]
 
   *) Fix support script `dbmmanage': It was unable to handle some sort
@@ -11,8 +18,8 @@ Changes with Apache 1.3b7
 
   *) WIN32: CGIs could cause a hang (because of a deadlock in the standard C
      library), so CGI handling has been changed to use Win32 native handles
-	 instead of C file descriptors.
-	 [Ben Laurie and Bill Stoddard <wgstodda@us.ibm.com>] PR#1129, 1607
+     instead of C file descriptors.
+     [Ben Laurie and Bill Stoddard <wgstodda@us.ibm.com>] PR#1129, 1607
 
   *) The proxy cache would store an incorrect content-length in the cached
      file copy after a cache update. That resulted in repeated fetching
